--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -182,7 +182,8 @@
         {% endif %}
         <a href="{{ path('user_index') }}" class="btn btn-secondary me-2">Retour</a>
         {% if currentUser.getId() != user.getId()  %}
-            <button class="btn btn-danger"
+            <button type="button"
+                    class="btn btn-danger"
                     data-uuid="{{ user.getId() }}"
                     data-controller="user"
                     data-action="user#deleteUser"
