--- a/back-office/templates/question_type/edit.html.twig
+++ b/back-office/templates/question_type/edit.html.twig
@@ -96,7 +96,8 @@
             </a>
         {% endif %}
         <a href="{{ path('question_type_index') }}" class="btn btn-secondary me-2">Retour</a>
-        <button class="btn btn-danger"
+        <button type="button"
+                class="btn btn-danger"
                 data-uuid="{{ questionType.getId() }}"
                 data-controller="questionType"
                 data-action="questionType#deleteQuestionType"
