Remove useless ternary

--- a/back-office/templates/question_type/edit.html.twig
+++ b/back-office/templates/question_type/edit.html.twig
@@ -85,7 +85,7 @@
                 {
                     'class': context == 'edit' ? 'btn btn-primary me-2' : 'd-none',
                 },
-            'label': context == 'edit' ?'Modifier'
+            'label': 'Modifier'
             }
         ) }}
         {% if context == 'show' %}
