--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -182,8 +182,7 @@
         {% endif %}
         <a href="{{ path('user_index') }}" class="btn btn-secondary me-2">Retour</a>
         {% if currentUser.getId() != user.getId()  %}
-            <button type="button"
-                    class="btn btn-danger"
+            <button class="btn btn-danger"
                     data-uuid="{{ user.getId() }}"
                     data-controller="user"
                     data-action="user#deleteUser"
