Center header items

--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -68,10 +68,16 @@ a:hover {
 
 .app-header {
     padding: 20px;
+    height: 90px;
+
+    display: flex;
+    align-items: center;
 }
 
 .header-left {
     float: left;
+
+    flex: 1;
 }
 
 .header-right {
