--- a/back-office/templates/security/login.html.twig
+++ b/back-office/templates/security/login.html.twig
@@ -10,16 +10,41 @@
 
     {% if app.user %}
         <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
+            Vous êtes déjà connecté en tant que {{ app.user.username }},
+            <a href="{{ path('app_logout') }}">
+                Deconnexion
+            </a>
         </div>
     {% endif %}
 
-    <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
-    <label for="inputUsername">Username</label>
-    <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
-    <label for="inputPassword">Password</label>
-    <input type="password" name="password" id="inputPassword" class="form-control" required>
-
+    <div class="row">
+        <h1 class="h2">Login</h1>
+        <hr>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="inputUsername" class="form-label lead">Nom d'utilisateur</label>
+            <input type="text"
+                   value="{{ last_username }}"
+                   name="username"
+                   id="inputUsername"
+                   class="form-control"
+                   required
+                   autofocus
+            >
+        </div>
+    </div>
+    <div class="row mb-3">
+        <div class="col-6">
+            <label for="inputPassword" class="form-label lead">Mot de passe</label>
+            <input type="password"
+                   name="password"
+                   id="inputPassword"
+                   class="form-control"
+                   required
+            >
+        </div>
+    </div>
     <input type="hidden" name="_csrf_token"
            value="{{ csrf_token('authenticate') }}"
     >
@@ -34,8 +59,8 @@
         </div>
     #}
 
-    <button class="btn btn-lg btn-primary" type="submit">
-        Sign in
+    <button class="btn btn-primary" type="submit">
+        Connexion
     </button>
 </form>
 {% endblock %}
