switch another branch

--- a/back-office/templates/user/edit.html.twig
+++ b/back-office/templates/user/edit.html.twig
@@ -169,7 +169,7 @@
                     class="btn btn-warning text-white"
                     data-controller="user"
                     data-action="user#resetPassword"
-                    data-user="{{ user.getEmail() }}"
+                    data-user="{{ user.getId() }}"
             >
                 Réinitialiser le mot de passe
             </button>
