--- a/frontend/src/css/style.css
+++ b/frontend/src/css/style.css
@@ -3,6 +3,7 @@
     --element-primary-background-color: #24BFF0;
 
     --button-blue-color: #40D9FF;
+    --button-blue-color-lighter: #4fe3ff;
 
     --button-pink-color: #DC71C7;
 }
